Fix: Deployed in vercel, solved not showing image issues
fix: solved deployment issues

fix: updated config so it uses node for local builds

fix: removed generated dirs

removed files with api keys

--- a/src/components/buttons/custom/CustomButton.module.scss
+++ b/src/components/buttons/custom/CustomButton.module.scss
@@ -1,4 +1,5 @@
 @use "../../../styles/theme/main.scss" as main;
+
 .custom-button {
   display: flex;
   flex-direction: row;
@@ -9,7 +10,7 @@
   border-radius: 100px;
   background-color: main.$secondary;
   color: main.$secondary-text;
-  :hover {
+  &:hover {
     cursor: pointer;
   }
 }
