--- a/src/components/sections/form/components/hyperlink/FormHyperlink.module.scss
+++ b/src/components/sections/form/components/hyperlink/FormHyperlink.module.scss
@@ -3,4 +3,7 @@
   border-bottom: 1px solid main.$secondary;
   color: main.$primary-text;
   margin-left: 4px;
+  &:hover {
+      cursor: pointer;
+    }
 }
