--- a/src/components/sections/projects/components/hyperLinkLabel/HyperLinkLabel.module.scss
+++ b/src/components/sections/projects/components/hyperLinkLabel/HyperLinkLabel.module.scss
@@ -3,7 +3,7 @@
   display: flex;
   border-bottom: 2px solid main.$secondary;
   color: main.$secondary;
-  :hover {
+  &:hover {
     cursor: pointer;
   }
 }
